[gd_scene load_steps=20 format=3 uid="uid://bqib0lsdt7lu8"]

[ext_resource type="PhysicsMaterial" uid="uid://4y2mfy5r8u5v" path="res://ingame/entities/projectiles/bullet_physics_material.tres" id="1_4jkvu"]
[ext_resource type="Texture2D" uid="uid://xa5vxaptiwsv" path="res://ingame/entities/projectiles/bullet_normal.png" id="1_qp50q"]
[ext_resource type="Script" uid="uid://c116i4g5og7gj" path="res://ingame/entities/projectiles/bullet.gd" id="2_wrvnv"]
[ext_resource type="AudioStream" uid="uid://cy22uropw1uaf" path="res://ingame/entities/SHOOT_NORMAL_toy-gun-364850.mp3" id="3_05xpt"]
[ext_resource type="AudioStream" uid="uid://dhoxj0irluo7u" path="res://ingame/tiles/MAZE_GENERATION_glitch-fx-transitions-10-311812.mp3" id="3_qbrdm"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_qbrdm"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:linear_velocity")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="Animation" id="Animation_qnes1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rest/Image:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_jhhk6"]
resource_name = "flicker_trap"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rest/Image:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.0980392), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qbrdm"]
resource_name = "hide_trap"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rest/Image:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jhhk6"]
_data = {
&"RESET": SubResource("Animation_qnes1"),
&"flicker_trap": SubResource("Animation_jhhk6"),
&"hide_trap": SubResource("Animation_qbrdm")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_d633r"]
radius = 32.0

[sub_resource type="Gradient" id="Gradient_05xpt"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0.431373)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qbrdm"]
gradient = SubResource("Gradient_05xpt")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_05xpt"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.1
color_ramp = SubResource("GradientTexture1D_qbrdm")

[sub_resource type="CircleShape2D" id="CircleShape2D_wrvnv"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_o8hsd"]
radius = 50.0

[sub_resource type="Gradient" id="Gradient_o8hsd"]
colors = PackedColorArray(0.918182, 0.918182, 0.918182, 1, 0.917647, 0.917647, 0.917647, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_05xpt"]
gradient = SubResource("Gradient_o8hsd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_qbrdm"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 1.0
initial_velocity_max = 60.0
gravity = Vector3(0, 0, 0)
scale_min = 0.01
scale_max = 0.05
color_ramp = SubResource("GradientTexture1D_05xpt")

[node name="Bullet" type="RigidBody2D"]
collision_layer = 4
collision_mask = 23
mass = 0.1
physics_material_override = ExtResource("1_4jkvu")
gravity_scale = 0.0
custom_integrator = true
continuous_cd = 1
contact_monitor = true
max_contacts_reported = 2
script = ExtResource("2_wrvnv")
metadata/type = "bullet"
metadata/bullet_id = -1
metadata/_edit_lock_ = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_qbrdm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jhhk6")
}

[node name="BounceLaser" type="AudioStreamPlayer" parent="."]
process_mode = 1
stream = ExtResource("3_qbrdm")
volume_db = -7.0
pitch_scale = 3.0

[node name="BounceRegular" type="AudioStreamPlayer" parent="."]
process_mode = 1
stream = ExtResource("3_05xpt")
volume_db = -12.0
pitch_scale = 3.0

[node name="BulletHit" type="AudioStreamPlayer" parent="."]
process_mode = 1
stream = ExtResource("3_05xpt")
volume_db = -5.0
pitch_scale = 0.3

[node name="WallTunnelProofTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="LifespanTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="TrapFlickerDelay" type="Timer" parent="."]
wait_time = 5.0

[node name="Hitbox" type="CollisionShape2D" parent="."]
scale = Vector2(0.1, 0.1)
shape = SubResource("CircleShape2D_d633r")
metadata/_edit_lock_ = true

[node name="Rest" type="Node2D" parent="."]
scale = Vector2(0.1, 0.1)
metadata/_edit_lock_ = true

[node name="LaserTrail" type="GPUParticles2D" parent="Rest"]
scale = Vector2(10, 10)
emitting = false
amount = 3000
texture = ExtResource("1_qp50q")
lifetime = 32.0
speed_scale = 64.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_05xpt")
metadata/_edit_lock_ = true

[node name="Image" type="Sprite2D" parent="Rest"]
texture = ExtResource("1_qp50q")
metadata/_edit_lock_ = true

[node name="VelocityRaycast" type="RayCast2D" parent="Rest"]
rotation = -1.5708
scale = Vector2(10, 10)
metadata/_edit_lock_ = true

[node name="WallTunnelProof" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="Hitbox" type="CollisionShape2D" parent="WallTunnelProof"]
shape = SubResource("CircleShape2D_wrvnv")
debug_color = Color(0.960603, 6.73831e-07, 0.515095, 0.42)
metadata/_edit_lock_ = true

[node name="EnemyDodgeRadius" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 16
metadata/_edit_lock_ = true

[node name="Hitbox" type="CollisionShape2D" parent="EnemyDodgeRadius"]
shape = SubResource("CircleShape2D_o8hsd")
metadata/_edit_lock_ = true

[node name="DespawnParticles" type="GPUParticles2D" parent="."]
process_mode = 1
emitting = false
amount = 70
texture = ExtResource("1_qp50q")
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_qbrdm")
metadata/_edit_lock_ = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifespanTimer" to="." method="_on_lifespan_timer_timeout"]
[connection signal="timeout" from="TrapFlickerDelay" to="." method="_on_trap_flicker_delay_timeout"]
[connection signal="body_entered" from="WallTunnelProof" to="." method="_on_wall_tunnel_proof_body_entered"]
[connection signal="finished" from="DespawnParticles" to="." method="_on_despawn_particles_finished"]
